; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_hdmi.c_intel_set_infoframe.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_hdmi.c_intel_set_infoframe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_encoder = type { i32 }
%struct.dip_infoframe = type { i32 }
%struct.intel_hdmi = type { i32 (%struct.drm_encoder.0*, %struct.dip_infoframe.1*)* }
%struct.drm_encoder.0 = type opaque
%struct.dip_infoframe.1 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_encoder*, %struct.dip_infoframe*)* @intel_set_infoframe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intel_set_infoframe(%struct.drm_encoder* %0, %struct.dip_infoframe* %1) #0 {
  %3 = alloca %struct.drm_encoder*, align 8
  %4 = alloca %struct.dip_infoframe*, align 8
  %5 = alloca %struct.intel_hdmi*, align 8
  store %struct.drm_encoder* %0, %struct.drm_encoder** %3, align 8
  store %struct.dip_infoframe* %1, %struct.dip_infoframe** %4, align 8
  %6 = load %struct.drm_encoder*, %struct.drm_encoder** %3, align 8
  %7 = call %struct.intel_hdmi* @enc_to_intel_hdmi(%struct.drm_encoder* %6)
  store %struct.intel_hdmi* %7, %struct.intel_hdmi** %5, align 8
  %8 = load %struct.dip_infoframe*, %struct.dip_infoframe** %4, align 8
  %9 = call i32 @intel_dip_infoframe_csum(%struct.dip_infoframe* %8)
  %10 = load %struct.intel_hdmi*, %struct.intel_hdmi** %5, align 8
  %11 = getelementptr inbounds %struct.intel_hdmi, %struct.intel_hdmi* %10, i32 0, i32 0
  %12 = load i32 (%struct.drm_encoder.0*, %struct.dip_infoframe.1*)*, i32 (%struct.drm_encoder.0*, %struct.dip_infoframe.1*)** %11, align 8
  %13 = load %struct.drm_encoder*, %struct.drm_encoder** %3, align 8
  %14 = bitcast %struct.drm_encoder* %13 to %struct.drm_encoder.0*
  %15 = load %struct.dip_infoframe*, %struct.dip_infoframe** %4, align 8
  %16 = bitcast %struct.dip_infoframe* %15 to %struct.dip_infoframe.1*
  %17 = call i32 %12(%struct.drm_encoder.0* %14, %struct.dip_infoframe.1* %16)
  ret void
}

declare dso_local %struct.intel_hdmi* @enc_to_intel_hdmi(%struct.drm_encoder*) #1

declare dso_local i32 @intel_dip_infoframe_csum(%struct.dip_infoframe*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
